Fix overflow text on buttons

--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -104,7 +104,6 @@
 	}
 
 	@media screen and (max-width: $phone-size) {
-		overflow: hidden;
-		text-overflow: ellipsis;
+		white-space: normal;
 	}
 }
